# DBus_FileMapper

./: README.md
DBus_FileMapper/: CMakeLists.txt  Interface.h  MyInterface.h  mainwindow.cpp  mainwindow.h
dbus_service/: CMakeLists.txt  MyInterface.cpp  MyInterface.h  main.cpp  org.artem.Interface.XML
